[project]
name = "hexodus"
version = "0.1"
authors = [{ name = "000pp", email = "opps3c@gmail.com" }]
description = "Hexodus: Active Directory Attack Framework"
readme = "README.md"
keywords = ["python3", "red team", "active directory", "pentest"]

classifiers = [
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
]

dependencies = ["ldap3 @ git+https://github.com/cannatag/ldap3.git@dev", 'rich>=13.5.3', 'impacket>=0.11.0', 'flask>=3.0.3']

license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/000pp/hexodus"
Issues = "https://github.com/000pp/hexodus/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
hexodus = "core:setup"